@@ -4,11 +4,11 @@ xskel.plot <- function(rwl,series,series.yrs = as.numeric(names(series)),
 
   ## Handle different types of 'series'
   tmp <- pick.rwl.series(rwl, series, series.yrs)
-  rwl <- tmp[[1]]
-  series <- tmp[[2]]
+  rwl2 <- tmp[[1]]
+  series2 <- tmp[[2]]
 
-  master.yrs <- as.numeric(rownames(rwl))
-  series.yrs <- as.numeric(names(series))
+  master.yrs <- as.numeric(rownames(rwl2))
+  series.yrs2 <- as.numeric(names(series2))
   yrs <- seq(from=win.start,to=win.end)
   nyrs <- length(yrs)
 
@@ -16,11 +16,11 @@ xskel.plot <- function(rwl,series,series.yrs = as.numeric(names(series)),
     warning("These plots get crowded with windows longer than 100 years.")
   }
   ## check window overlap with master and series yrs
-  if (!all(yrs %in% series.yrs)) {
+  if (!all(yrs %in% series.yrs2)) {
       cat(gettextf("Window Years: %d-%d", min(yrs), max(yrs),
                    domain = "R-dplR"),
           " & ",
-          gettextf("Series Years: %d-%d", min(series.yrs), max(series.yrs),
+          gettextf("Series Years: %d-%d", min(series.yrs2), max(series.yrs2),
                    domain = "R-dplR"),
           "\n", sep="")
       stop("Fix window overlap")
@@ -36,8 +36,8 @@ xskel.plot <- function(rwl,series,series.yrs = as.numeric(names(series)),
   }
 
   ## normalize.
-  names(series) <- series.yrs
-  tmp <- normalize.xdate(rwl, series, n, prewhiten, biweight)
+  names(series2) <- series.yrs2
+  tmp <- normalize.xdate(rwl2, series2, n, prewhiten, biweight)
 
   ## master
   master <- tmp$master
@@ -45,22 +45,22 @@ xskel.plot <- function(rwl,series,series.yrs = as.numeric(names(series)),
   master <- master[master.yrs%in%yrs]
   master.yrs <- as.numeric(names(master))
   ## series
-  series <- tmp$series
-  series.yrs <- as.numeric(names(series))
-  series <- series[series.yrs%in%yrs]
-  series.yrs <- as.numeric(names(series))
+  series2 <- tmp$series
+  series.yrs2 <- as.numeric(names(series2))
+  series2 <- series2[series.yrs2%in%yrs]
+  series.yrs2 <- as.numeric(names(series2))
 
 
   ## skeleton
   master.skel <- cbind(master.yrs,xskel.calc(master))
   master.skel <- master.skel[master.skel[,1]%in%yrs,]
   master.yrs.sig <- master.skel[!is.na(master.skel[,2]),1]
-  series.skel <- cbind(series.yrs,xskel.calc(series))
+  series.skel <- cbind(series.yrs2,xskel.calc(series2))
   series.skel <- series.skel[series.skel[,1]%in%yrs,]
   series.yrs.sig <- series.skel[!is.na(series.skel[,2]),1]
 
   ## cor and skel agreement
-  overall.r <- round(cor(series,master),3)
+  overall.r <- round(cor(series2,master),3)
   overall.agree <- sum(series.yrs.sig%in%master.yrs.sig)/length(master.yrs.sig)
   overall.agree <- round(overall.agree*100,1)
 
@@ -105,7 +105,7 @@ xskel.plot <- function(rwl,series,series.yrs = as.numeric(names(series)),
   grid.rect(x = yrs, y = 0, width = 1, height = 2 * master,
             hjust = 0.5, vjust = 1, default.units = "native",
             gp=gpar(fill=col1light,col=col1dark))
-  grid.rect(x = yrs, y = 0, width = 1, height = 2 * series,
+  grid.rect(x = yrs, y = 0, width = 1, height = 2 * series2,
             hjust = 0.5, vjust = 0, default.units = "native",
             gp=gpar(fill=col1light,col=col1dark))
 
